--- a/index.html
+++ b/index.html
@@ -1,26 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Totally Semantic Title</title>
 
-		<!-- Meta Information -->
-		<meta name="author" content=" ">
-		<meta name="description" content=" ">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Totally Semantic Title</title>
 
-		<!-- Google Fonts -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
+	<!-- Meta Information -->
+	<meta name="author" content=" ">
+	<meta name="description" content=" ">
 
-		<!-- Stylesheets -->
-		<link rel="stylesheet" type="text/css" href="css/modern-reset.css">
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
-	</head>
-	<body>
-		<div class="container">
-			<h1>Hello, world!</h1>
-		</div>
-	</body>
+	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Monoton&family=Rubik:wght@300;400;700&display=swap"
+		rel="stylesheet">
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" type="text/css" href="css/modern-reset.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+</head>
+
+<body>
+	<div class="container">
+		<nav>
+			<div class="nav-wrapper">
+				<div class="logo">
+					<h1>C<h1 class="logo-underline">reative</h1>
+					</h1>
+					<p>S T U D I O</p>
+				</div>
+				<div class="nav-menu">
+					<ul>
+						<li>SERVICES</li>
+						<li>OUR WORK</li>
+						<li>ABOUT US</li>
+						<li>BLOG</li>
+						<li>CONTACT</li>
+					</ul>
+					<div class="search">
+						<img src="./img/svg/search-icon.svg">
+						<input type="text" name="search" placeholder="SEARCH" />
+					</div>
+				</div>
+			</div>
+		</nav>
+
+		<header>
+			<div class="header-background">
+				<div class="header-content">
+					<h2>WE ARE CREATIVE STUDIO</h2>
+					<p>We are a multi-disciplinary design, development, and digital marketing agency based in New York
+						and Manhatten Beach. We specialize in creating experiences and engagements</p>
+					<div class="header-buttons">
+						<a href="#">LET'S WORK TOGETHER!</a>
+						<a href="#">VIEW OUR WORK</a>
+					</div>
+				</div>
+			</div>
+		</header>
+
+		<main>
+			<div class="our-work">
+				<h2>OUR WORK</h2>
+				<p>We partner with big brands to create powerful products and experiences. Take a peek at our projects
+				</p>
+			</div>
+
+			<div class="horizontal-scroll">
+				<div class="row-one">
+					<div class="card">
+						<img src="img/apollo-studios-prototyping.jpg" alt="placeholder" />
+						<p>USER EXPERIENCE</p>
+					</div>
+
+					<div class="card">
+						<img src="img/binance-business-card-design.jpg" alt="placeholder" />
+						<p>WEBSITE DESIGN & DEVELOPMENT</p>
+					</div>
+
+					<div class="card">
+						<img src="img/creative-co-branding.jpg" alt="placeholder" />
+						<p>BRANDING</p>
+					</div>
+
+					<div class="card">
+						<img src="img/le-buzz-website-design.jpg" alt="placeholder" />
+						<p>APP DESIGN & DEVELOPMENT</p>
+					</div>
+				</div>
+
+				<div class="row-two">
+					<div class="card">
+						<img src="img/digipool-app-design-and-dev.jpg" alt="placeholder" />
+						<p>WEB DESIGN & DEVELOPMENT</p>
+					</div>
+					
+					<div class="card">
+						<img src="img/ga-photography-digital-marketing.jpg" alt="placeholder" />
+						<p>BRANDING - LOGO</p>
+					</div>
+
+					<div class="card">
+						<img src="img/digital-products-web-design.jpg" alt="placeholder" />
+						<p>DIGITAL MARKETING</p>
+					</div>
+
+					<div class="card">
+						<img src="img/signmud-logo-design.jpg" alt="placeholder" />
+						<p>UX & WEB DESIGN</p>
+					</div>
+				</div>
+
+				<a href="#">VIEW ALL OF OUR WORK <img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
+			</div>
+
+		</main>
+	</div>
+</body>
+
 </html>
