--- a/index.html
+++ b/index.html
@@ -112,10 +112,47 @@
 					</div>
 				</div>
 
-				<a href="#">VIEW ALL OF OUR WORK <img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
+				<a href="#" class="more-button">VIEW ALL OF OUR WORK <img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
 			</div>
 
+			<div class="what-we-do">
+				<h2>WHAT WE DO!</h2>
+				<p>We partner with company leaders to help you understand your customers better, and build the right products and experiences to serve them. We work with you to define your vision and improve your business outcomes</p>
+				<a href="#" class="more-button">VIEW OUR SERVICES<img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
+
+				<div class="what-we-do-card">
+					<img src="img/coffee-cup.webp" alt="Coffee Cup">
+					<h3>Branding</h3>
+					<p>Branding is one of the most crucial aspects of any business. At Creative Studio, we value our clients' creative identities and offer long-term solutions.</p>
+				</div>
+
+				<div class="what-we-do-card">
+					<img src="img/hero-banner.webp" alt="Something">
+					<h3>Web Design</h3>
+					<p>We craft exceptional interactive digital user experiences that extend across a brand's entire ecosystem.</p>
+				</div>
+
+				<div class="what-we-do-card">
+					<img src="img/location.webp" alt="Something">
+					<h3>App Design & Development</h3>
+					<p>We build apps with cutting ege technology that provide interactive solutions and improve user experience for everyday problems</p>
+				</div>
+			</div>
+
+			<div class="who-we-are">
+				<h2>WHO WE ARE</h2>
+				<p>We are an award-winning creative multi-disciplinary design, development and digital marketing agency consisting of a 60-strong team of designers, engineers, and strategists. We have been crafting digital and brand experiences for over 15 years and we love all challenges that come our way.</p>
+				<p>We are authentic, down-to-earth, and put our clients' needs first every time. We aim to be the brightest minds in digital-intellect, and are always looking for better ways to create exceptional user experiences.</p>
+
+				<a href="#" class="more-button">LEARN MORE ABOUT US<img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
+
+				<img src="img/food.webp" alt="Food I guess">
+			</div>
 		</main>
+
+		<footer>
+
+		</footer>
 	</div>
 </body>
 
