Menu hidden; mobile

--- a/index.html
+++ b/index.html
@@ -25,13 +25,10 @@
 	<div class="container">
 		<nav>
 			<div class="nav-wrapper">
-				<div class="logo">
-					<h1>C<h1 class="logo-underline">reative</h1>
-					</h1>
-					<p>S T U D I O</p>
-				</div>
+				<img class="logo" src="img/svg/creative-studio-logo.svg" alt="Creative studio logo">
+				<img class="menu-icon" src="img/svg/burger-menu-svgrepo-com.svg" alt="menu icon">
 				<div class="nav-menu">
-					<ul>
+					<ul class="menu-hide">
 						<li>SERVICES</li>
 						<li>OUR WORK</li>
 						<li>ABOUT US</li>
@@ -95,7 +92,7 @@
 						<img src="img/digipool-app-design-and-dev.jpg" alt="placeholder" />
 						<p>WEB DESIGN & DEVELOPMENT</p>
 					</div>
-					
+
 					<div class="card">
 						<img src="img/ga-photography-digital-marketing.jpg" alt="placeholder" />
 						<p>BRANDING - LOGO</p>
@@ -112,39 +109,51 @@
 					</div>
 				</div>
 
-				<a href="#" class="more-button">VIEW ALL OF OUR WORK <img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
+				<a href="#" class="more-button">VIEW ALL OF OUR WORK <img src="img/svg/right-arrow.svg"
+						alt="Right arrow"></a>
 			</div>
 
 			<div class="what-we-do">
 				<h2>WHAT WE DO!</h2>
-				<p>We partner with company leaders to help you understand your customers better, and build the right products and experiences to serve them. We work with you to define your vision and improve your business outcomes</p>
-				<a href="#" class="more-button">VIEW OUR SERVICES<img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
+				<p>We partner with company leaders to help you understand your customers better, and build the right
+					products and experiences to serve them. We work with you to define your vision and improve your
+					business outcomes</p>
+				<a href="#" class="more-button">VIEW OUR SERVICES<img src="img/svg/right-arrow.svg"
+						alt="Right arrow"></a>
 
 				<div class="what-we-do-card">
 					<img src="img/coffee-cup.webp" alt="Coffee Cup">
 					<h3>Branding</h3>
-					<p>Branding is one of the most crucial aspects of any business. At Creative Studio, we value our clients' creative identities and offer long-term solutions.</p>
+					<p>Branding is one of the most crucial aspects of any business. At Creative Studio, we value our
+						clients' creative identities and offer long-term solutions.</p>
 				</div>
 
 				<div class="what-we-do-card">
 					<img src="img/hero-banner.webp" alt="Something">
 					<h3>Web Design</h3>
-					<p>We craft exceptional interactive digital user experiences that extend across a brand's entire ecosystem.</p>
+					<p>We craft exceptional interactive digital user experiences that extend across a brand's entire
+						ecosystem.</p>
 				</div>
 
 				<div class="what-we-do-card">
 					<img src="img/location.webp" alt="Something">
 					<h3>App Design & Development</h3>
-					<p>We build apps with cutting ege technology that provide interactive solutions and improve user experience for everyday problems</p>
+					<p>We build apps with cutting ege technology that provide interactive solutions and improve user
+						experience for everyday problems</p>
 				</div>
 			</div>
 
 			<div class="who-we-are">
 				<h2>WHO WE ARE</h2>
-				<p>We are an award-winning creative multi-disciplinary design, development and digital marketing agency consisting of a 60-strong team of designers, engineers, and strategists. We have been crafting digital and brand experiences for over 15 years and we love all challenges that come our way.</p>
-				<p>We are authentic, down-to-earth, and put our clients' needs first every time. We aim to be the brightest minds in digital-intellect, and are always looking for better ways to create exceptional user experiences.</p>
+				<p>We are an award-winning creative multi-disciplinary design, development and digital marketing agency
+					consisting of a 60-strong team of designers, engineers, and strategists. We have been crafting
+					digital and brand experiences for over 15 years and we love all challenges that come our way.</p>
+				<p>We are authentic, down-to-earth, and put our clients' needs first every time. We aim to be the
+					brightest minds in digital-intellect, and are always looking for better ways to create exceptional
+					user experiences.</p>
 
-				<a href="#" class="more-button">LEARN MORE ABOUT US<img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
+				<a href="#" class="more-button">LEARN MORE ABOUT US<img src="img/svg/right-arrow.svg"
+						alt="Right arrow"></a>
 
 				<img src="img/food.webp" alt="Food I guess">
 			</div>
@@ -175,7 +184,8 @@
 				<h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
 				<input type="email" placeholder="EMAIL ADDRESS" />
 				<a href="#" class="more-button">SUBSCRIBE NOW</a>
-				<p>You may unsubscribe from our monthly newsletter at any time. Check out our Privacy Policy for more information on how we store and protect your data.</p>
+				<p>You may unsubscribe from our monthly newsletter at any time. Check out our Privacy Policy for more
+					information on how we store and protect your data.</p>
 			</div>
 
 			<div class="social-media-copyright">
