--- a/index.html
+++ b/index.html
@@ -44,16 +44,12 @@
 		</nav>
 
 		<header>
-			<div class="header-background">
-				<div class="header-content">
-					<h2>WE ARE CREATIVE STUDIO</h2>
-					<p>We are a multi-disciplinary design, development, and digital marketing agency based in New York
-						and Manhatten Beach. We specialize in creating experiences and engagements</p>
-					<div class="header-buttons">
-						<a href="#">LET'S WORK TOGETHER!</a>
-						<a href="#">VIEW OUR WORK</a>
-					</div>
-				</div>
+			<div class="header-content">
+				<h1>WE ARE CREATIVE STUDIO</h1>
+				<p>We are a multi-disciplinary design, development, and digital marketing agency based in New York
+					and Manhatten Beach. We specialize in creating experiences and engagements</p>
+				<a href="#" class="menu-button">LET'S WORK TOGETHER!</a>
+				<a href="#" class="menu-button">VIEW OUR WORK</a>
 			</div>
 		</header>
 
