what we do mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
 					<img src="img/le-buzz-website-design.jpg" alt="placeholder" />
 					<p>APP DESIGN & DEVELOPMENT</p>
 				</div>
-
 				<div class="card">
 					<img src="img/digipool-app-design-and-dev.jpg" alt="placeholder" />
 					<p>WEB DESIGN & DEVELOPMENT</p>
@@ -114,21 +113,21 @@
 
 				<div class="what-we-do-card">
 					<img src="img/coffee-cup.webp" alt="Coffee Cup">
-					<h3>Branding</h3>
+					<p>Branding</p>
 					<p>Branding is one of the most crucial aspects of any business. At Creative Studio, we value our
 						clients' creative identities and offer long-term solutions.</p>
 				</div>
 
 				<div class="what-we-do-card">
 					<img src="img/hero-banner.webp" alt="Something">
-					<h3>Web Design</h3>
+					<p>Web Design</p>
 					<p>We craft exceptional interactive digital user experiences that extend across a brand's entire
 						ecosystem.</p>
 				</div>
 
 				<div class="what-we-do-card">
 					<img src="img/location.webp" alt="Something">
-					<h3>App Design & Development</h3>
+					<p>App Design & Development</p>
 					<p>We build apps with cutting ege technology that provide interactive solutions and improve user
 						experience for everyday problems</p>
 				</div>
