--- a/index.html
+++ b/index.html
@@ -178,13 +178,17 @@
 					information on how we store and protect your data.</p>
 			</div>
 
-			<div class="social-media-copyright">
-				<a href=""><img src="img/svg/instagram-brands.svg" alt="Our Instagram Page"></a>
-				<a href=""><img src="img/svg/facebook-f-brands.svg" alt="Our Facebook Page"></a>
-				<a href=""><img src="img/svg/mailchimp-brands.svg" alt="Our Mailchimp"></a>
-				<p>Copyright &copy;2024 |</p>
-				<p>For Educational Purposes Only |</p>
-				<p>Privacy Policy |</p>
+			<div class="contact-wrapper">
+				<div class="social-media">
+					<a href=""><img src="img/svg/instagram-brands.svg" alt="Our Instagram Page"></a>
+					<a href=""><img src="img/svg/facebook-f-brands.svg" alt="Our Facebook Page"></a>
+					<a href=""><img src="img/svg/mailchimp-brands.svg" alt="Our Mailchimp"></a>
+				</div>
+				<div class="copyright">
+					<p>Copyright &copy;2024 |</p>
+					<p>For Educational Purposes Only |</p>
+					<p>Privacy Policy |</p>
+				</div>
 			</div>
 		</footer>
 	</div>
