mobile view done

--- a/index.html
+++ b/index.html
@@ -150,44 +150,47 @@
 		</main>
 
 		<footer>
-			<div class="our-offices">
-				<h2>OUR OFFICES</h2>
-				<div class="address">
-					<p>136 W 30th Street</p>
-					<p>New York, NY 10038</p>
-					<p>(310) 570-4482</p>
-					<p>Mon - Fri 9am - 5pm</p>
+			<div class="footer-wrapper">
+				<div class="our-offices">
+					<h2>OUR OFFICES</h2>
+					<div class="address">
+						<p>136 W 30th Street</p>
+						<p>New York, NY 10038</p>
+						<p>(310) 570-4482</p>
+						<p>Mon - Fri 9am - 5pm</p>
+					</div>
+
+					<div class="address">
+						<p>1800 Larsson Street</p>
+						<p>Manhattan Beach, CA 90266</p>
+						<p>(424) 223-3767</p>
+						<p>Mon - Fri 8:30am - 4:30pm</p>
+					</div>
+
+					<p>Email us, say Hello!</p>
+					<p>hello@creativestudio.com</p>
 				</div>
 
-				<div class="address">
-					<p>1800 Larsson Street</p>
-					<p>Manhattan Beach, CA 90266</p>
-					<p>(424) 223-3767</p>
-					<p>Mon - Fri 8:30am - 4:30pm</p>
+				<div class="newsletter">
+					<h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
+					<input type="email" placeholder="EMAIL ADDRESS" />
+					<a href="#" class="more-button">SUBSCRIBE NOW</a>
+					<p>You may unsubscribe from our monthly newsletter at any time. Check out our Privacy Policy for
+						more
+						information on how we store and protect your data.</p>
 				</div>
 
-				<p>Email us, say Hello!</p>
-				<p>hello@creativestudio.com</p>
-			</div>
-
-			<div class="newsletter">
-				<h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
-				<input type="email" placeholder="EMAIL ADDRESS" />
-				<a href="#" class="more-button">SUBSCRIBE NOW</a>
-				<p>You may unsubscribe from our monthly newsletter at any time. Check out our Privacy Policy for more
-					information on how we store and protect your data.</p>
-			</div>
-
-			<div class="contact-wrapper">
-				<div class="social-media">
-					<a href=""><img src="img/svg/instagram-brands.svg" alt="Our Instagram Page"></a>
-					<a href=""><img src="img/svg/facebook-f-brands.svg" alt="Our Facebook Page"></a>
-					<a href=""><img src="img/svg/mailchimp-brands.svg" alt="Our Mailchimp"></a>
-				</div>
-				<div class="copyright">
-					<p>Copyright &copy;2024 |</p>
-					<p>For Educational Purposes Only |</p>
-					<p>Privacy Policy |</p>
+				<div class="contact-wrapper">
+					<div class="social-media">
+						<a href=""><img src="img/svg/instagram-brands.svg" alt="Our Instagram Page"></a>
+						<a href=""><img src="img/svg/facebook-f-brands.svg" alt="Our Facebook Page"></a>
+						<a href=""><img src="img/svg/mailchimp-brands.svg" alt="Our Mailchimp"></a>
+					</div>
+					<div class="copyright">
+						<p>Copyright &copy;2024 |</p>
+						<p>For Educational Purposes Only |</p>
+						<p>Privacy Policy |</p>
+					</div>
 				</div>
 			</div>
 		</footer>
