Medium view done

--- a/index.html
+++ b/index.html
@@ -45,11 +45,14 @@
 
 		<header>
 			<div class="header-content">
-				<h1>WE ARE CREATIVE STUDIO</h1>
+				<h1>WE ARE </h1>
+				<h1>CREATIVE STUDIO</h1>
 				<p>We are a multi-disciplinary design, development, and digital marketing agency based in New York
 					and Manhatten Beach. We specialize in creating experiences and engagements</p>
-				<a href="#" class="menu-button">LET'S WORK TOGETHER!</a>
-				<a href="#" class="menu-button">VIEW OUR WORK</a>
+				<div class="header-button">
+					<a href="#" class="menu-button">LET'S WORK TOGETHER!</a>
+					<a href="#" class="menu-button">VIEW OUR WORK</a>
+				</div>
 			</div>
 		</header>
 
@@ -100,8 +103,7 @@
 					<p>UX & WEB DESIGN</p>
 				</div>
 			</div>
-			<a href="#" class="more-button">VIEW ALL OF OUR WORK <img src="img/svg/right-arrow.svg"
-					alt="Right arrow"></a>
+			<a href="#" class="more-work">VIEW ALL OF OUR WORK <img src="img/svg/right-arrow.svg" alt="Right arrow"></a>
 
 			<div class="what-we-do">
 				<h2>WHAT WE DO!</h2>
@@ -113,25 +115,32 @@
 
 				<div class="what-we-do-card">
 					<img src="img/coffee-cup.webp" alt="Coffee Cup">
-					<p>Branding</p>
-					<p>Branding is one of the most crucial aspects of any business. At Creative Studio, we value our
-						clients' creative identities and offer long-term solutions.</p>
+					<div class="card-content">
+						<p>Branding</p>
+						<p>Branding is one of the most crucial aspects of any business. At Creative Studio, we value our
+							clients' creative identities and offer long-term solutions.</p>
+					</div>
 				</div>
 
 				<div class="what-we-do-card">
 					<img src="img/hero-banner.webp" alt="Something">
-					<p>Web Design</p>
-					<p>We craft exceptional interactive digital user experiences that extend across a brand's entire
-						ecosystem.</p>
+					<div class="card-content">
+						<p>Web Design</p>
+						<p>We craft exceptional interactive digital user experiences that extend across a brand's entire
+							ecosystem.</p>
+					</div>
 				</div>
 
 				<div class="what-we-do-card">
 					<img src="img/location.webp" alt="Something">
-					<p>App Design & Development</p>
-					<p>We build apps with cutting ege technology that provide interactive solutions and improve user
-						experience for everyday problems</p>
+					<div class="card-content">
+						<p>App Design & Development</p>
+						<p>We build apps with cutting ege technology that provide interactive solutions and improve user
+							experience for everyday problems</p>
+					</div>
 				</div>
 			</div>
+
 
 			<div class="who-we-are">
 				<h2>WHO WE ARE</h2>
@@ -145,14 +154,14 @@
 				<a href="#" class="more-button">LEARN MORE ABOUT US<img src="img/svg/right-arrow.svg"
 						alt="Right arrow"></a>
 
-				<img src="img/food.webp" alt="Food I guess">
+				<img src="img/food.webp" alt="Food I guess" class="who-we-are-img">
 			</div>
 		</main>
 
 		<footer>
 			<div class="footer-wrapper">
+				<h2>OUR OFFICES</h2>
 				<div class="our-offices">
-					<h2>OUR OFFICES</h2>
 					<div class="address">
 						<p>136 W 30th Street</p>
 						<p>New York, NY 10038</p>
@@ -166,15 +175,18 @@
 						<p>(424) 223-3767</p>
 						<p>Mon - Fri 8:30am - 4:30pm</p>
 					</div>
-
+				</div>
+				<div class="email-us">
 					<p>Email us, say Hello!</p>
 					<p>hello@creativestudio.com</p>
 				</div>
 
 				<div class="newsletter">
 					<h2>SUBSCRIBE TO OUR NEWSLETTER</h2>
-					<input type="email" placeholder="EMAIL ADDRESS" />
-					<a href="#" class="more-button">SUBSCRIBE NOW</a>
+					<div class="email-input">
+						<input type="email" placeholder="EMAIL ADDRESS" />
+						<a href="#" class="more-button">SUBSCRIBE NOW</a>
+					</div>
 					<p>You may unsubscribe from our monthly newsletter at any time. Check out our Privacy Policy for
 						more
 						information on how we store and protect your data.</p>
@@ -182,9 +194,9 @@
 
 				<div class="contact-wrapper">
 					<div class="copyright">
-						<p>Copyright &copy;2024 |</p>
-						<p>For Educational Purposes Only |</p>
-						<p>Privacy Policy |</p>
+						<p>Copyright &copy;2024 |
+						For Educational Purposes Only |
+						Privacy Policy |</p>
 					</div>
 					<div class="social-media">
 						<a href=""><img src="img/svg/instagram-brands.svg" alt="Our Instagram Page"></a>
